
<package format="2">
  <name>rtabmap_ros</name>
  <version>0.20.0</version>
  <description>RTAB-Map_apl ros-pkg. RTAB-Map_apl is a library that wraps RTAB-Map library</description>

  <!-- author and maintainer referes to this is  fork from the original RTABMap_ros -->
  <maintainer email="nicolas.norena@jhuapl.edu">Nicolas Norena-Acosta</maintainer>
  <author>Nicolas Norena-Acosta</author>


  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>genmsg</buildtool_depend>
  
  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>stereo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>class_loader</build_depend>
  <build_depend>rtabmap_apl</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>find_object_2d</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pluginlib</build_depend>
  
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>stereo_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>compressed_depth_image_transport</exec_depend>
  <exec_depend>compressed_image_transport</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>laser_geometry</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>rviz</exec_depend> 
  <exec_depend>message_filters</exec_depend>
  <exec_depend>class_loader</exec_depend>
  <exec_depend>rtabmap_apl</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>octomap_msgs</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>find_object_2d</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>pluginlib</exec_depend>

  <build_depend>libpcl-all-dev</build_depend>

  <!-- added by APL -->
  <exec_depend>objectrecognition</exec_depend>


  <export>
	  <nodelet plugin="${prefix}/nodelet_plugins.xml" />
    <rviz plugin="${prefix}/rviz_plugins.xml"/>
	  <costmap_2d plugin="${prefix}/repository/rtabmap_ros/costmap_plugins.xml"/>
  </export>
  
</package>
